# mtgscan

./: .gitignore  Keywords.json  LICENSE  Makefile  README.md  all_cards.txt  deck.py  example.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: codeql-analysis.yml  python-app.yml
mtgscan/: __init__.py  box_text.py  deck.py  image.py  ocr.py  text.py  utils.py
mtgscan/ocr/: azure.py  ocr.py
tests/: test.py
tests/samples/80_jeskai/: image  url_image.txt
tests/samples/arena_RG/: deck.txt  image
tests/samples/arena_RG_2/: deck.txt
tests/samples/arena_aristocrats/: url_image.txt
tests/samples/arena_nosb/: deck.txt
tests/samples/cube_RB/: deck.txt
tests/samples/text_mtgo/: deck.txt
tests/samples/vintage_bazaar/: deck.txt  image  url_image.txt
