[tool.poetry]
name = "mtgscan"
version = "0.1.0"
description = "Convert an image of Magic cards to decklist"
authors = ["fortierq <qpfortier@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
symspellpy = "^6.7.0"
requests = "^2.25.0"
numpy = "^1.19.4"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
