[tool.poetry]
name = "mtgscan"
version = "1.0.8"
description = "Convert an image containing Magic cards to decklist"
authors = ["qfortier <qpfortier@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fortierq/MTGScan"
repository = "https://github.com/fortierq/MTGScan"
keywords = ["mtg", "scan", "OCR", "magic", "cards", "computer vision"]

[tool.poetry.dependencies]
python = "^3.8"
symspellpy = "^6.7.0"
requests = "^2.25.0"
matplotlib = "^3.3.3"
psutil = "^5.8.0"
numpy = "^1.19.3"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
flake8 = "^3.8.4"
pylint = "^2.6.0"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
